--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
     
                     <div class="email">
-                        <form>
+                        <form action="dashboard/index.html">
                             <table>
                                 <tr>
                                     <td>
